# audiovideoplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwin.cpp  mainwin.hpp  playlistmodel.cpp  playlistmodel.hpp  trayicon.cpp  trayicon.hpp  videowidget.cpp  videowidget.hpp
